# FATN_to_USB

./: DISPLAY_DETECTION_PLAN.md  README.md  REQUIREMENTS.md  TESTING_STRATEGY.md  pyproject.toml
FATN_to_USB/: pyproject.toml
FATN_to_USB/fatn_to_usb/: 50-udiskie.rules  Get_FATN_Dropbox_link.py  copy-Fatn  copy-Fatn.py  display_detector.py  main.py  on_boot.py  scrolling_text.py
FATN_to_USB/tests/: conftest.py  test_copy_fatn.py  test_display_detector.py  test_fatn_to_usb.py  test_get_fatn_dropbox_link.py
