[tool.poetry]
name = "FATN_to_USB"
version = "0.3.0"
description = "Automated USB loader for Farnham and Alton Talking News audio content"
authors = ["Alistair Amabile <alistairanywhere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = ""
Pillow = "^10.3.0"
html = ""

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
