[tool.poetry]
name = "fatn_to_usb"
version = "0.3.0"
description = "Download FATN zip file and load onto USB stick"
authors = ["Alistair Amabile <alistairanywhere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"

Pillow = "^10.3.0"
requests = "^2.32.4"

ST7789 = "^0.0.2"
ST7735 = "^0.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
responses = "^0.23.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=fatn_to_usb",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
    "slow: Slow running tests",
    "hardware: Requires physical hardware",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
